# openvmm

./: Cargo.toml
openhcl/hcl/src/: ioctl.rs  protocol.rs
openhcl/hcl/src/ioctl/: tdx.rs
openhcl/openhcl_boot/src/: main.rs
openhcl/underhill_core/src/: worker.rs
openhcl/underhill_mem/src/: init.rs  lib.rs  mapping.rs
openhcl/virt_mshv_vtl/: Cargo.toml
openhcl/virt_mshv_vtl/src/: lib.rs
openhcl/virt_mshv_vtl/src/processor/: mod.rs
openhcl/virt_mshv_vtl/src/processor/hardware_cvm/: mod.rs
openhcl/virt_mshv_vtl/src/processor/mshv/: arm64.rs  x64.rs
openhcl/virt_mshv_vtl/src/processor/snp/: mod.rs
openhcl/virt_mshv_vtl/src/processor/tdx/: mod.rs  timer.rs
openvmm/membacking/src/mapping_manager/: va_mapper.rs
support/pal/pal_tdx/: Cargo.toml
support/pal/pal_tdx/src/: lib.rs  timer.rs
tmk/tmk_vmm/src/: paravisor_vmm.rs
vm/devices/firmware/firmware_uefi/src/: lib.rs
vm/hv1/hv1_emulator/src/: hv.rs  synic.rs
vm/vmcore/guestmem/: Cargo.toml
vm/vmcore/guestmem/src/: lib.rs
vm/x86/x86defs/src/: tdx.rs
vmm_core/virt_support_apic/: Cargo.toml
vmm_core/virt_support_apic/src/: lib.rs
