# Copyright (c) Microsoft Corporation.
# Licensed under the MIT License.

[package]
name = "guestmem"
edition.workspace = true
rust-version.workspace = true

[dependencies]
tracing = "0.1"
inspect.workspace = true
pal_event.workspace = true
sparse_mmap.workspace = true

thiserror.workspace = true
zerocopy.workspace = true

[lints]
workspace = true
